kustomization/components/networkpolicy-allow-to-loki/networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-loki-networkpolicy
spec:
  egress:
    - ports:
        - port: 3100
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: loki
  podSelector:
    matchLabels:
      hogs.tswn.us/loki-client: "true"
  policyTypes:
    - Egress
